# OpenRE-Bench-Artifact

./: .dockerignore  .env.example  .gitignore  CITATION.cff  Dockerfile  LICENSE.md  MARE-iReDev-QUARE-comparison-report.md  RE26_ARTIFACT_REBUTTAL_DRAFT.md  README.md  pyproject.toml  run_matrix.py
data/case_studies/: AD_input.json  ATM_input.json  Bookkeeping_input.json  Library_input.json  README.md  RollCall_input.json
data/ground_truth/: README.md
data/knowledge_base/: automotive_safety.py  knowledge_guide.py  sample_knowledge_fixed.py
docs/: NLP4RE-ID-CARD.md  README.md  methodology.md
docs/guides/: incose-format.md  precision-f1.md
docs/reference/: artifacts.md  cli.md
docs/targets/: quare-orchestrator.md
experiment_outputs/mare-iredev-quare/: README.md  comparison_ablation_table.csv  comparison_metrics_by_case.csv  comparison_metrics_summary.csv  comparison_runs.jsonl  comparison_validity_log.md
human_eval/: Phase3_Human_Evaluation_Annotators.xlsx  README.md  phase3_human_eval_mapping.json  phase3_human_eval_sample_summary.json  phase3_requirements_all.csv  phase3_requirements_all.json  phase3_requirements_summary.json
human_eval/analysis/: human_eval_agreement_summary.csv  human_eval_agreement_summary.json  human_eval_framework_summary.csv  (+6 more)
openre_bench_iredev/: README.md  __init__.py
openre_bench_mare/: README.md  __init__.py
openre_bench_quare/: README.md  __init__.py
scripts/: analyze_human_eval_results.py  analyze_human_vs_llm_alignment.py  anonymize_paths.py  build_human_eval_workbook.py  build_phase3_human_eval_collection.py  build_phase3_requirements_excel.py  build_table_c_human_validation.py  export_phase3_requirements.py  fix_human_eval_framework_mapping.py  generate_human_eval_collection.py  match_collection_to_phase3_export.py  run_human_eval_llm_judge.py  trace_human_eval_to_phase3.py
tests/: conftest.py  fake_iredev_llm.py  fake_mare_llm.py  smoke_test_model_access.py  test_auto_report_coverage.py  test_auto_report_workflow.py  test_comparison_harness_coverage.py  test_comparison_harness_metrics.py  test_comparison_validator_coverage.py  test_core_coverage.py  test_dual_runtime_routing.py  test_iredev_runtime_semantics.py  test_llm.py  test_mare_runtime_semantics.py  test_pipeline_utils.py  test_quare_optional_artifacts.py  test_quare_phase2_behavior.py  test_strict_run_record_validation.py
(+922 files in other folders)
