[project]
name = "openre_bench"
version = "0.1.0"
description = "Benchmarks for complex LLM-debate based requirements engineering stages."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "pydantic-settings>=2.10.0",
  "litellm>=1.0.0",
  "numpy>=2.0.0",
  "openpyxl>=3.1.0",
  "pandas>=3.0.0",
  "scipy>=1.13.0",
  "scikit-learn>=1.5.0",
  "bert-score>=0.3.13",
]

[project.scripts]
openre_bench = "openre_bench.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/openre_bench",
  "openre_bench_mare",
  "openre_bench_iredev",
  "openre_bench_quare",
]

[tool.hatch.build.targets.wheel.force-include]
"data/case_studies" = "openre_bench/data/case_studies"
"data/knowledge_base" = "openre_bench/data/knowledge_base"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
"scripts/analyze_human_vs_llm_alignment.py" = ["E402"]
"scripts/build_phase3_human_eval_collection.py" = ["E402"]
"scripts/export_phase3_requirements.py" = ["E402"]
"scripts/match_collection_to_phase3_export.py" = ["E402"]
"scripts/run_human_eval_llm_judge.py" = ["E402"]
"scripts/trace_human_eval_to_phase3.py" = ["E402"]
